Keep bridge validation compatible with min SDK